// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withMessage() throws error with custom message when matcher fails 1`] = `
"should fail

expected ACTUAL to be 1"
`;

exports[`withMessage() throws error with custom message when not matcher fails 1`] = `
"should fail

expected ACTUAL to not be ACTUAL"
`;
